# pranomics

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  dockerfile  environment.yml  pyproject.toml  setup.py
bootstrap/: osdetect.py
metadata/: metadata.csv
pranomics/: __init__.py  cli.py  environment.py  main.py  pipeline.py  setup.py
pranomics/bootstrap/: conda.py  downloader.py  internet.py  osdetect.py  verify.py
pranomics/modules/: ai_interpretation.py  alignment.py  bam_processing.py  count_matrix.py  deg.py  deg_summary.py  differential_expression.py  fastq.py  fastqc.py  final_report.py  gene_annotation.py  gff_annotation.py  heatmap.py  html_report.py  interactive_plotly.py  pca.py  sample_discovery.py  sorting.py  stringtie_module.py  trimming.py  volcano.py
pranomics/utils/: UI.py  auto_installer.py  checkpoint.py  conda_bootstrap.py  executor.py  flow.py  installer.py  metadata_discovery.py  paths.py  reference_manager.py  report_engine.py  sample_discovery.py  setup.py  state_manager.py  tool_manager.py  validators.py
scripts/: edgeR_analysis.R  heatmap.R  pca.R  volcano.R
test_pranomics_release/metadata/: metadata.csv
